# ifl

./: .gitignore  README.md  hie.yaml  ifl.cabal
app/: Main.hs
examples/core1/: example.core
lib/: Language.hs  Utils.hs
lib/Core1/: Examples.hs  Language.hs  PPrint.hs  Parser.hs
